--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -11,7 +11,7 @@
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
-            background-repeat: no-repeat;
+            background-repeat: repeat-y;
             background-size: cover;
         }
 
@@ -28,6 +28,12 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos rerum architecto, facere provident fugiat eos ipsum dicta voluptates. Architecto commodi nulla hic amet doloremque vitae eaque vero rem quos totam?Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi est facere animi repellat, dicta mollitia doloremque ut exercitationem veritatis, provident sunt officiis cumque corporis nobis tempora esse totam corrupti voluptate?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo error itaque laudantium ipsum eos vero molestiae nisi, debitis quas neque aliquid voluptatem iure asperiores porro, temporibus aperiam vitae, dicta nulla!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos rerum architecto, facere provident fugiat eos ipsum dicta voluptates. Architecto commodi nulla hic amet doloremque vitae eaque vero rem quos totam?Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi est facere animi repellat, dicta mollitia doloremque ut exercitationem veritatis, provident sunt officiis cumque corporis nobis tempora esse totam corrupti voluptate?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo error itaque laudantium ipsum eos vero molestiae nisi, debitis quas neque aliquid voluptatem iure asperiores porro, temporibus aperiam vitae, dicta nulla!
+        </p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos rerum architecto, facere provident fugiat eos ipsum dicta voluptates. Architecto commodi nulla hic amet doloremque vitae eaque vero rem quos totam?Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi est facere animi repellat, dicta mollitia doloremque ut exercitationem veritatis, provident sunt officiis cumque corporis nobis tempora esse totam corrupti voluptate?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo error itaque laudantium ipsum eos vero molestiae nisi, debitis quas neque aliquid voluptatem iure asperiores porro, temporibus aperiam vitae, dicta nulla!
+        </p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos rerum architecto, facere provident fugiat eos ipsum dicta voluptates. Architecto commodi nulla hic amet doloremque vitae eaque vero rem quos totam?Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi est facere animi repellat, dicta mollitia doloremque ut exercitationem veritatis, provident sunt officiis cumque corporis nobis tempora esse totam corrupti voluptate?Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo error itaque laudantium ipsum eos vero molestiae nisi, debitis quas neque aliquid voluptatem iure asperiores porro, temporibus aperiam vitae, dicta nulla!
         </p>
     </main>
