--- a/exercicios/ex024/iframe001.html
+++ b/exercicios/ex024/iframe001.html
@@ -17,7 +17,7 @@
     <h1>Testando o uso de iframe</h1>
     <p>Acessando o site do 
         <!--Tamanho padrão do iframe 300x150-->
-        <iframe src="https://cursoemvideo.com" frameborder="0">
+        <iframe src="https://cursoemvideo.com" frameborder="0" scolling="no">
             <a href="https://cursoemvideo.com" target="_blank"></a>
         </iframe>
 
