--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -4,9 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>iframe</title>
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+        }
+
+        iframe {
+            width: 300px;
+            height: 400px;
+            display: block;
+            margin: auto;
+        }
+    </style>
 </head>
 <body>
-    
+    <h1>Teste com iframe</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque commodi aliquam, optio id ipsa tempora molestiae assumenda pariatur harum atque, eum quo labore, sequi voluptatem tenetur eaque itaque dolorum veritatis.
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui numquam aliquam velit illum tempora fugit dignissimos quod voluptate, et rem recusandae incidunt placeat error explicabo quo necessitatibus. Quidem, nam rerum. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas perferendis ex a ratione quod libero nihil, omnis cupiditate fugit ea labore harum exercitationem asperiores architecto, repellendus deserunt, unde animi blanditiis?
+    </p>
+    <iframe src="paginas-extras/pag001.html" frameborder="1"></iframe>
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque placeat voluptas nostrum ad dolores explicabo voluptatem delectus nemo deleniti doloribus ex at distinctio consectetur eum, ipsam obcaecati aspernatur ipsa sequi. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis facilis sed voluptatibus! Doloremque, quia eius delectus animi repellat assumenda rem, ipsam debitis amet magni corporis officia culpa incidunt blanditiis magnam? 
+    </p>
 </body>
 </html>
