--- a/exercicios/ex024/iframe006.html
+++ b/exercicios/ex024/iframe006.html
@@ -15,8 +15,12 @@
     <h1>Conteudos dentro do iframes</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias quas alias ab quae illum amet cupiditate! Totam debitis, dolore perspiciatis facilis iste, dolorum optio officia corporis beatae explicabo, ipsa repellat.</p>
     <h2>Vídeos</h2>
+
     <iframe width="560" height="315" src="https://www.youtube.com/embed/-q_o6esIgbc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/vrUFULAjy9A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <h2>Mapas</h2>
+
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59540.71461489016!2d-49.03751850128172!3d-21.140668663478873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94bc1fdded413b7f%3A0x955a83e5141a2c06!2sArena%20P7%20Society!5e0!3m2!1spt-BR!2sbr!4v1655905149555!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    
 </body>
 </html>
