--- a/exercicios/ex024/iframe006.html
+++ b/exercicios/ex024/iframe006.html
@@ -21,6 +21,9 @@
     <h2>Mapas</h2>
 
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d59540.71461489016!2d-49.03751850128172!3d-21.140668663478873!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94bc1fdded413b7f%3A0x955a83e5141a2c06!2sArena%20P7%20Society!5e0!3m2!1spt-BR!2sbr!4v1655905149555!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    
+     <h2>Waze</h2>
+
+     <iframe src="https://embed.waze.com/iframe?zoom=17&lat=-21.140559&lon=-48.987527&ct=livemap" width="600" height="450" allowfullscreen></iframe>
+
 </body>
 </html>
