tudo que ficou para traz

--- a/exercicios/ex025/form001.html
+++ b/exercicios/ex025/form001.html
@@ -23,6 +23,7 @@
     <!--
         method
         get tem um limite de até 3 mil bits(letras)
+        post não tem limite de bits e esconde usuario e senha no caso de criar login
     -->
 </body>
 </html>
