--- a/exercicios/ex026/mq001/index.html
+++ b/exercicios/ex026/mq001/index.html
@@ -7,6 +7,8 @@
     <title>Medía Query</title>
     <!--Chamada media Query
     media query = media type e media feature(caracteristicas de tela)
+    screen = tela
+    print = impressora
     -->
     <link rel="stylesheet" href="estilos/tela.css" media="screen">
     <link rel="stylesheet" href="estilos/impressora.css" media="print">
